# dezoom

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml
homework_module01/: Dockerfile  README.md  ingest_data2.py  ingest_data3.py  main.py  notebook_pqingest.ipynb  pyproject.toml
homework_module02/: README.md  docker-compose.yaml
homework_module03/: README.md  load_yellow_taxi_data.py  main.py  pyproject.toml
homework_module04/: README.md  add_to_kestra.yml  new_sources.yml  staging_schema.yml  stg_fhv_tripdata.sql
pipeline/: Dockerfile  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
terraform_demo/: .gitignore  main.tf
