[project]
name = "dezoom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]

[tool.uv.workspace]
members = [
    "homework_module01","homework_module03",
]
